# Rogue

./: .gitignore  CMakeLists.txt  README.md
inc/: Font.h  Shader.h
res/: simple.fsh  simple.vsh  text.frag  text.vert  ui.frag  ui.vert
src/: Font.cpp  Shader.cpp  main.cpp
